# cinema

./: Readme.md  pyproject.toml  pytest.ini  request.http
cinema/: __init__.py  celery.py  settings.py  urls.py
movies/: api.py  models.py  schemas.py  tasks.py  tests.py
movies/migrations/: 0001_initial.py  0002_alter_movie_poster.py  0003_alter_movie_protagonists.py  0004_movie_movies_movi_name_98114c_idx.py
